syntax = "proto3";

package createtestrun;

option go_package = "./;createtestrun";

service TestRunService {
    rpc CreateTestRun(CreateTestRunRequest) returns (CreateTestRunResponse);
}

message CreateTestRunRequest {
    TestRun test_run = 1;
}

message CreateTestRunResponse {
    bool success = 1;
    string error_message = 2;
    TestRun test_run = 3;
}

message TestRun {
    int64 id = 1;
    string name = 2;
    repeated SuiteRun suite_runs = 3;
}

message SuiteRun {
    repeated SpecRun spec_runs = 1;
}

message SpecRun {
    repeated Tag tags = 1;
}

message Tag {
    string name = 1;
}